several unused prints and imports removed